fix small facebook bug

--- a/Podcast/Info.plist
+++ b/Podcast/Info.plist
@@ -72,7 +72,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
-		<string>fb-messenger-api</string>
+		<string>fb-messenger-share-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
