ignoring podfile generated acknowledgement file

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ xcuserdata
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 
 Pods/
+Pods-acknowledgements.plist
