--- a/Podcast/Keys.plist
+++ b/Podcast/Keys.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>api-url</key>
-	<string>http://52.11.200.154/api/v1</string>
+	<string></string>
 </dict>
 </plist>
