--- a/Podcast/Keys.plist
+++ b/Podcast/Keys.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>api-url</key>
 	<string></string>
+	<key>privacypolicy-url</key>
+	<string>http://www.cornellappdev.com/recast-privacy-policy</string>
 </dict>
 </plist>
