--- a/Podcast/Keys.plist
+++ b/Podcast/Keys.plist
@@ -7,7 +7,7 @@
 	<key>privacypolicy-url</key>
 	<string>http://cornellappdev.com/recast-privacy-policy</string>
 	<key>reportfeedback-url</key>
-	<string>https://cornellappdev.typeform.com/to/BgFSDM</string>
+	<string>https://cornellappdev.typeform.com/to/e93Hk9</string>
 	<key>github-url</key>
 	<string>https://github.com/cuappdev/</string>
 	<key>appdev-url</key>
