--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 osx_image: xcode9
-language: swift
+language: objective-c
 xcode_workspace: Podcast.xcworkspace
 xcode_scheme: PodcastTests
 install: pod install --repo-update
