--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 osx_image: xcode9
 language: objective-c
 install: pod install --repo-update
-script: xcodebuild clean build -sdk iphonesimulator -workspace Podcast.xcworkspace -scheme PodcastTests CODE_SIGNING_REQUIRED=NO
+xcode_workspace: Podcast.xcworkspace
 notifications:
   slack: cornellappdev:a14S65FEYLlmNgDUPCxjCLdy
