--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ osx_image: xcode9
 language: objective-c
 install: pod install --repo-update
 xcode_workspace: Podcast.xcworkspace
+xcode_scheme: PodcastTests
 notifications:
   slack: cornellappdev:a14S65FEYLlmNgDUPCxjCLdy
