--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 osx_image: xcode9
 language: objective-c
 install: pod install --repo-update
-xcode_workspace: Podcast.xcworkspace
-xcode_scheme: PodcastTests
+script:
+    - xcodebuild clean build -sdk iphonesimulator -workspace Podcast.xcworkspace -scheme PodcastTests CODE_SIGNING_REQUIRED=NO
 notifications:
   slack: cornellappdev:a14S65FEYLlmNgDUPCxjCLdy
