--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Keys
+secrets.tar
 Podcast/Keys.plist
 Podcast/GoogleService-Info.plist
 
@@ -32,7 +33,7 @@ xcuserdata
 *.hmap
 *.ipa
 
-## Fastlane 
+## Fastlane
 *.mobileprovision
 *.dSYM.zip
 *.ipa
