--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 osx_image: xcode9
 language: objective-c
 before_install:
-  - openssl aes-256-cbc -K $encrypted_e0cb45932b9c_key -iv $encrypted_e0cb45932b9c_iv -in Podcast/Keys.plist.enc -out Podcast/Keys.plist -d
-  - openssl aes-256-cbc -K $encrypted_e0cb45932b9c_key -iv $encrypted_e0cb45932b9c_iv -in Podcast/GoogleService-Info.plist.enc -out Podcast/GoogleService-Info.plist -d
+  - openssl aes-256-cbc -K $encrypted_e0cb45932b9c_key -iv $encrypted_e0cb45932b9c_iv -in secrets.tar.enc -out Podcast/secrets.tar -d
+  - tar xvf Podcast/secrets.tar
 install: pod install --repo-update
 script:
   - xcodebuild clean build -sdk iphonesimulator -workspace Podcast.xcworkspace -scheme PodcastTests CODE_SIGNING_REQUIRED=NO > /dev/null
