--- a/Podcast/Info.plist
+++ b/Podcast/Info.plist
@@ -75,6 +75,7 @@
 	<array>
 		<string>audio</string>
 		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
