Add swiftlint and resolve warnings

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,8 +1,38 @@
-disabled_rules:
-  - trailing_whitespace
-  - line_length
-  - function_body_length
-  - type_name
-  - identifier_name
-excluded:
-  - Pods
+disabled_rules: # rule identifiers to exclude from running
+- identifier_name
+- nesting
+- function_parameter_count
+opt_in_rules: # some rules are only opt-in
+- control_statement
+- empty_count
+- colon
+- comma
+included: # paths to include during linting. `--path` is ignored if present.
+- Recast
+excluded: # paths to ignore during linting. Takes precedence over `included`.
+- Pods
+- Recast/R.generated.swift
+- Recast/AppDelegate.swift
+# configurable rules can be customized from this configuration file
+# binary rules can set their severity level
+force_cast: warning # implicitly. Give warning only for force casting
+force_try:
+  severity: warning # explicitly. Give warning only for force try
+type_body_length:
+- 300 # warning
+- 400 # error
+# or they can set both explicitly
+file_length:
+  warning: 500
+  error: 800
+large_tuple: # warn user when using 3 values in tuple, give error if there are 4
+- 3
+- 4
+# naming rules can set warnings/errors for min_length and max_length
+# additionally they can set excluded names
+type_name:
+  min_length: 4 # only warning
+  max_length: # warning and error
+    warning: 30
+    error: 35
+reporter: "xcode"
